# multilayer_perceptron

./: Cargo.toml  Makefile  README.md
resources/: data.csv
src/: cell.rs  main.rs  math.rs  predict.rs  reader.rs
src/perceptron/: activation_functions.rs  layered.rs  mod.rs  perceptron.rs
