[package]
name = "multilayer_perceptron"
version = "0.1.0"
authors = ["McM1k <gallien.boudrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
serde = { version = "1.0.104", features = ["derive"] }
rand = { version = "0.7.2", features = ["small_rng"] }
rand_core = "0.5.1"